updates in template

--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{deedy-resume-openfont} % Use US Letter paper, change to a4paper for A4
+\documentclass[letterpaper]{deedy-resume-openfont} % Use US Letter paper, change to a4paper for A4
 
 \begin{document}
 
@@ -9,7 +9,7 @@
 \lastupdated % Print the Last Updated text at the top right
 
 \namesection{Linda}{Zheng}{ % Your name
-\href{mailto:lindazheng1993@gmail.com}{lindazheng1993@gmail.com | 469-305-9242 | github.com/yaylinda} % Your contacv information
+\href{mailto:lindazheng1993@gmail.com}{lindazheng1993@gmail.com | 469-305-9242 | github.com/yaylinda} % Your contact information
 }
 
 \section{Experience}
