--- a/deedy-resume-openfont.cls
+++ b/deedy-resume-openfont.cls
@@ -11,7 +11,7 @@
 \LoadClass{article}
 
 % Package Imports
-\usepackage[hmargin=0.75cm, vmargin=0.5cm]{geometry}
+\usepackage[hmargin=0.5cm, vmargin=0.5cm]{geometry}
 \usepackage[hidelinks]{hyperref}
 
 % Publications
@@ -32,26 +32,26 @@
 
 % Date command
 \usepackage[absolute]{textpos}
-\usepackage[UKenglish]{isodate}
+\usepackage[USenglish]{isodate}
 \setlength{\TPHorizModule}{1mm}
 \setlength{\TPVertModule}{1mm}
-\newcommand{\lastupdated}{\begin{textblock}{60}(155,5)
+\newcommand{\lastupdated}{\begin{textblock}{60}(169,5)
 \color{date}\fontspec[Path = fonts/raleway/]{Raleway-ExtraLight}\fontsize{8pt}{10pt}\selectfont 
-Last Updated on \today
+Last updated: \today
 \end{textblock}}
 
 % Name command
 \newcommand{\namesection}[3]{
 \centering{
-\fontsize{30pt}{40pt}
+\fontsize{24pt}{28pt}
 \fontspec[Path = fonts/lato/]{Lato-Hai}\selectfont #1 
 \fontspec[Path = fonts/lato/]{Lato-Lig}\selectfont #2
 } \\[5pt]
 \centering{
 \color{headings}
 \fontspec[Path = fonts/raleway/]{Raleway-Medium}\fontsize{8pt}{10pt}\selectfont #3}
-\noindent\makebox[\linewidth]{\color{headings}\rule{20cm}{0.2pt}}
-\vspace{-5pt}
+\noindent\makebox[\linewidth]{\color{headings}\rule{21cm}{0.2pt}}
+\vspace{-10pt}
 }
 
 % Section seperators 
@@ -63,14 +63,14 @@ Last Updated on \today
 
 % Headings command
 \titleformat{\section}{\color{headings}
-\scshape\fontspec[Path = fonts/lato/]{Lato-Lig}\fontsize{14pt}{16pt}\selectfont \raggedright\uppercase}{}{0em}{}
+\scshape\fontspec[Path = fonts/lato/]{Lato-Lig}\fontsize{12pt}{14pt}\selectfont \raggedright\uppercase}{}{0em}{}
 
 % Subeadings command
 \titleformat{\subsection}{
-\color{subheadings}\fontspec[Path = fonts/lato/]{Lato-Bol}\fontsize{12pt}{12pt}\selectfont\bfseries\uppercase}{}{0em}{}
+\color{subheadings}\fontspec[Path = fonts/lato/]{Lato-Bol}\fontsize{10pt}{10pt}\selectfont\bfseries\uppercase}{}{0em}{}
 
 \newcommand{\runsubsection}[1]{
-\color{subheadings}\fontspec[Path = fonts/lato/]{Lato-Bol}\fontsize{12pt}{12pt}\selectfont\bfseries\uppercase {#1} \normalfont}
+\color{subheadings}\fontspec[Path = fonts/lato/]{Lato-Bol}\fontsize{10pt}{10pt}\selectfont\bfseries\uppercase {#1} \normalfont}
 
 % Descriptors command
 \newcommand{\descript}[1]{
