update skills; back to two columns

--- a/resume.tex
+++ b/resume.tex
@@ -12,12 +12,90 @@
 \href{mailto:lindazheng1993@gmail.com}{lindazheng1993@gmail.com | 469-305-9242 | github.com/yaylinda} % Your contact information
 }
 
+%----------------------------------------------------------------------------------------
+% LEFT COLUMN
+%----------------------------------------------------------------------------------------
+
+\begin{minipage}[t]{0.28\textwidth} % The left column takes up 33% of the text width of the page
+
+%------------------------------------------------
+% Education
+%------------------------------------------------
+
+\section{Education} 
+\sectionheadersep
+
+\subsection{Rice University}
+\descript{B.S. in Computer Science, Statistics}
+\location{Aug 2012 - May 2016 \\ GPA: 3.71}
+
+\sectionsep % Some whitespace after the section
+\sectionsep % Some whitespace after the section
+
+%------------------------------------------------
+% Skills
+%------------------------------------------------
+
+\section{Skills}
+\sectionheadersep
+    
+\subsection{Programming Languages}
+\textbullet{} Java\\
+\textbullet{} Python\\
+\textbullet{} Typescript/JavaScript\\
+\textbullet{} SQL\\
+\textbullet{} R\\
+\textbullet{} Matlab\\
+\textbullet{} HTML/CSS\\
+\textbullet{} Rust (learning)\\
+
+\sectionsep % Some whitespace after the section
+
+\subsection{Backend Frameworks}
+\textbullet{} SpringBoot, Spring (Java)\\
+\textbullet{} Flask, Django (Python)\\
+\textbullet{} Express.js (Node.js)\\
+
+\sectionsep % Some whitespace after the section
+
+\subsection{Frontend Frameworks}
+\textbullet{} React\\
+\textbullet{} React Native, Expo\\
+\textbullet{} Vue\\
+\textbullet{} Angular\\
+
+\sectionsep % Some whitespace after the section
+
+\subsection{Cloud Technologies}
+\textbullet{} Amazon Web Services\\
+\textbullet{} Google Cloud Platform\\
+\textbullet{} Kubernetes\\
+\textbullet{} Docker\\
+
+\sectionsep % Some whitespace after the section
+
+%----------------------------------------------------------------------------------------
+
+\end{minipage} % The end of the left column
+\hfill
+%
+%----------------------------------------------------------------------------------------
+% RIGHT COLUMN
+%----------------------------------------------------------------------------------------
+%
+\begin{minipage}[t]{0.71\textwidth} % The right column takes up 66% of the text width of the page
+
+%------------------------------------------------
+% Experience
+%------------------------------------------------
+
 \section{Experience}
 \sectionheadersep
 
 \runsubsection{Encipher}
 \descript{| Principal Software Engineer}
 \location{Oct 2022 - Present | Houston, TX (Remote)}
+\sectionsep
 
 \begin{tightemize}
 \item Designed the system architecture, and led small but mighty engineering team in the implementation of Encipher's flagship product, InfinityVAULT, a trustless role-based secure data storage and permissioning system.
@@ -61,6 +139,30 @@
 
 \sectionsep % Some whitespace after the section
 
+%------------------------------------------------
+
+%----------------------------------------------------------------------------------------
+
+\end{minipage} % The end of the right column
+
+%----------------------------------------------------------------------------------------
+% SECOND PAGE (EXAMPLE)
+%----------------------------------------------------------------------------------------
+
+\newpage % Start a new page
+
+\begin{minipage}[t]{0.28\textwidth} % The left column takes up 33% of the text width of the page
+
+\section{}
+
+\end{minipage} % The end of the left column
+\hfill
+\begin{minipage}[t]{0.71\textwidth} % The right column takes up 66% of the text width of the page
+
+%------------------------------------------------
+% Experience
+%------------------------------------------------
+
 \runsubsection{Capital One}
 \descript{| Senior Software Engineer}
 
@@ -102,59 +204,8 @@
 
 \sectionsep % Some whitespace after the section
 
-%------------------------------------------------
-% Education
-%------------------------------------------------
-\sectionsep
-\sectionsep
-\section{Education}
-\sectionheadersep
+\end{minipage} % The end of the right column
 
-\runsubsection{Rice University}
-\descript{| Computer Science, Statistics}
-\location{Aug 2012 - May 2016 | GPA: 3.7}
-
-\begin{tightemize}
-\item Computer Science Courses: Artificial Intelligence, Game Creation \& Design, Operating Systems, Concurrent Programming, Database Systems and Design, Object Oriented Programming, Compilers, Data Structures, Advanced Algorithms
-\item Statistics Courses: Data Mining, Statistical Learning, Financial Time Series, Regression Analysis, Bioinformatics
-\end{tightemize}
-
-\sectionsep % Some whitespace after the section
-\sectionsep % Some whitespace after the section
-
-%------------------------------------------------
-% Skills
-%------------------------------------------------
-
-\section{Skills}
-\sectionheadersep
-
-\runsubsection{Programming Languages}
-\sectionheadersep
-\begin{tightemize}
-\item Java
-\item Python
-\item Typescript
-\item JavaScript
-\item HTML/CSS
-\item SQL
-\item R
-\item Rust (new)
-\end{tightemize}
-
-\sectionsep
-\sectionsep
-
-\runsubsection{Frameworks \& Technologies}
-\sectionheadersep
-\begin{tightemize}
-\item AWS
-\item Kubernetes
-\item GraphQL + Apollo
-\item Spring/SpringBoot
-\item React
-\item React Native
-\item Vue
-\end{tightemize}
+%----------------------------------------------------------------------------------------
 
 \end{document}
