--- a/resume.tex
+++ b/resume.tex
@@ -16,7 +16,7 @@
 % LEFT COLUMN
 %----------------------------------------------------------------------------------------
 
-\begin{minipage}[t]{0.28\textwidth} % The left column takes up 33% of the text width of the page
+\begin{minipage}[t]{0.24\textwidth} % The left column takes up 33% of the text width of the page
 
 %------------------------------------------------
 % Education
@@ -83,7 +83,7 @@
 % RIGHT COLUMN
 %----------------------------------------------------------------------------------------
 %
-\begin{minipage}[t]{0.71\textwidth} % The right column takes up 66% of the text width of the page
+\begin{minipage}[t]{0.73\textwidth} % The right column takes up 66% of the text width of the page
 
 %------------------------------------------------
 % Experience
@@ -146,21 +146,13 @@
 \end{minipage} % The end of the right column
 
 %----------------------------------------------------------------------------------------
-% SECOND PAGE (EXAMPLE)
+% SECOND PAGE
 %----------------------------------------------------------------------------------------
 
 \newpage % Start a new page
 
-\begin{minipage}[t]{0.28\textwidth} % The left column takes up 33% of the text width of the page
-
-\section{}
-
-\end{minipage} % The end of the left column
-\hfill
-\begin{minipage}[t]{0.71\textwidth} % The right column takes up 66% of the text width of the page
-
 %------------------------------------------------
-% Experience
+% Experience Cont.
 %------------------------------------------------
 
 \runsubsection{Capital One}
@@ -203,8 +195,6 @@
 \end{tightemize}
 
 \sectionsep % Some whitespace after the section
-
-\end{minipage} % The end of the right column
 
 %----------------------------------------------------------------------------------------
 
