work description updates

--- a/resume.tex
+++ b/resume.tex
@@ -55,6 +55,7 @@
 \textbullet{} SpringBoot, Spring (Java)\\
 \textbullet{} Flask, Django (Python)\\
 \textbullet{} Express.js (Node.js)\\
+\textbullet{} REST, GraphQL, gRPC\\
 
 \sectionsep % Some whitespace after the section
 
@@ -98,9 +99,8 @@
 \sectionsep
 
 \begin{tightemize}
-\item Designed the system architecture, and led small but mighty engineering team in the implementation of Encipher's flagship product, InfinityVAULT, a trustless role-based secure data storage and permissioning system.
-\item Designed the gRPC interface and data-modeling between the Python backend server, Cassandra database, and multiple frontend clients: React App, Microsoft Office Plug-In, Desktop Client
-\item Built the backend server and React App, while leading other developers on the development of the other clients. 
+\item Designed the system architecture, and led a small but mighty engineering team in the implementation of Encipher's flagship product, InfinityVAULT, a trustless role-based secure data storage and permissioning system.
+\item Designed the gRPC interface and data-modeling between the Python backend server, Cassandra database, and multiple frontend clients: React App, Microsoft Office Plug-In, Desktop Client. Built the backend server and React App, while leading other developers on the development of the other clients.
 \item Setup the architecture for an asynchronous task workflow orchestrator to improve the performance and scalability of the product.
 \item Coordinated with executive leaders and stakeholders on product requirements and deliverables.
 \item Patent-pending on the trustless and role-based secure data storage methodologies.
@@ -155,17 +155,20 @@
 % Experience Cont.
 %------------------------------------------------
 
+\section{Experience Cont.}
+\sectionheadersep
+
 \runsubsection{Capital One}
 \descript{| Senior Software Engineer}
 
 \location{July 2019 - Jan 2020 | Plano, TX}
 
 \begin{tightemize}
-\item Designed and and developed Metadata Management Service. Including discovering metadata across entire corporation, automated data pipeline to bring data into internal database to be used for the marketing platform. Developed frontend application with role-management to facilitate the data onboarding process. (Java, SpringBoot, Vue, PostgreSQL, MemSQL, AWS, ECS)
-\item Patent pending on dataset collation process to use data from multiple sources, with multiple cadences as consolidated dynamic view. (Java, SpringBoot, NodeJS, SQL)
-\item Patent pending on API introspection and invocation process. (Java, SpringBoot, OpenAPI Spec)
-\item Continued maintenance and development on six microservices for marketing platform.
-\item Demonstrated leadership by mentoring new team member on Vue development, and leading sub-team with detailed requirements and dates.
+\item Designed and developed the Metadata Management Service, which allows users to discover metadata about data sources across the entire company for various marketing purposes. Also developed a Vue Application with role-management to facilitate the data source onboarding process.
+\item Patent-pending on dataset collation process to use data from multiple sources.
+\item Patent-pending on API introspection and invocation process.
+\item Demonstrated leadership by mentoring a new team member on Vue development, and leading a sub-team with detailed requirements and deadlines.
+\item Continued maintenance and development on the six microservices for the marketing platform.
 \end{tightemize}
 
 \sectionsep % Some whitespace after the section
@@ -175,12 +178,11 @@
 \location{July 2017 - July 2019 | Plano, TX}
 
 \begin{tightemize}
-\item Designed and developed an enterprise-wide platform for automated, real-time, always-on, intelligent marketing platform. Primary developer and owner of six microservices, and one of three frontend developers. (Java, SpringBoot, NodeJS, MemSQL, PostgreSQL, Javascript/Typescript, HTML/CSS, WebComponents, AWS)
-\item Developed an Ad Server integrated with Google AdSense to serve dynamically rendered, individually customized vehicle ads based on customer information. Intelligently parses vehicle make, model, and body type from source website. Patent pending. (Java, SpringBoot, NodeJS, ECS, Redis, HTML/CSS, Mustache)
-\item Instrumented metrics for over a dozen microservices, using Prometheus. Authored rules for PagerDuty alerts based on metrics, with Slack integration. (Prometheus, PromQL, Slack) 
-\item Implemented API and UI for Call Center agents to capture notes from customer communications. (Java, Angular, AWS, PostgreSQL)
-\item Designed and implemented Automated Handwriting System using RNN Machine Learning Algorithms, with UI, server, and polling client to write greeting cards to customers. (Python, Tensorflow, Angular, AxiDraw V3)
-\item Developed enterprise-wide API for Cloud file storage abstraction, and an automated data migration system to extract files from the on-premise Data Center to the Cloud with unique IDs for fast retrieval. (Java, ECS, S3, SQS, CFT, SQL)
+\item Designed and developed an enterprise-wide platform for automated, real-time, always-on, intelligent marketing platform. Primary developer and owner of six Java SpringBoot microservices, and one of three frontend Vue developers.
+\item Developed a Node.js Ad Server integrated with Google AdSense to serve individually customized vehicle ads based on customer information. Built a Google Chrome extension that parses information from the source website to demonstrate the personalized ads that could be served. Patent pending.
+\item Instrumented metrics for the team across all microservices using Prometheus. Authored rules for PagerDuty alerts based on metrics, with Slack integration.
+\item Designed and implemented an Automated Handwriting System using RNN Machine Learning Algorithms, with an Angular Web UI, Python Flask server, and polling client to write greeting cards to customers.
+\item Developed an enterprise-wide API for Cloud file storage abstraction, and an automated data migration system to migrate data from the on-premise Data Center to the Cloud.
 \end{tightemize}
 
 \sectionsep % Some whitespace after the section
@@ -190,8 +192,8 @@
 \location{July 2016 - July 2017 | Plano, TX}
 
 \begin{tightemize}
-\item Developed an Angular Widget for all Financial Services applications to capture customer feedback. (Java, SpringBoot, Angular, AWS, PostgreSQL, Splunk)
-\item Built ad-hoc data analysis platform using open-source Apache Zeppelin. Implemented features: connection to Redshift Clusters, schema browser, SQL parser/linter/visualizer. (Java, Angular, AWS, Redshift, ElasticSearch, Spark, R, Python)
+\item Developed an Angular Widget across all Financial Services web pages to capture customer feedback, backed by a Java SpringBoot microservice and PostgreSQL database.
+\item Built an ad-hoc data analysis platform using Apache Zeppelin (Java). Features include connecting to Redshift Clusters, and an Angular Web UI with a database schema browser, and SQL parser/linter/visualizer.
 \end{tightemize}
 
 \sectionsep % Some whitespace after the section
