update resume with personal projects

--- a/resume.tex
+++ b/resume.tex
@@ -197,6 +197,47 @@
 \end{tightemize}
 
 \sectionsep % Some whitespace after the section
+\sectionsep % Some whitespace after the section
+
+%------------------------------------------------
+% Personal Projects
+%------------------------------------------------
+
+\section{Recent Personal Projects}
+\sectionsep
+
+\runsubsection{Multi-Agent ChatGPT}
+\descript{}
+\location{In-Development}
+\begin{tightemize}
+\item Allow users to create group chats with friends, and an AI personality.
+\item Motivation: Group chats are fun, but it's easy to lose context and forget what people have said in the past. ChatGPT is awesome, but I want my friends to join in the conversation too.
+\item Tech Stack: React Native (Typescript), Supabase.js with Postgres.
+\item Future Plans: Use Pinecone DB for conversation context storage.
+\end{tightemize}
+\sectionsep % Some whitespace after the section
+
+\runsubsection{Life as Booleans}
+\descript{}
+\location{Development Paused}
+\begin{tightemize}
+\item Track and visualize daily activities/habits as booleans.
+\item Motivation: I love tracking and visualizing data about my life, and used to keep a daily spreadsheet of over 60 columns. Thought to myself, wouldn't this be better as an app/website?
+\item Tech Stack: React (Typescript) with Google Firebase (https://yaylinda.github.io/life-as-booleans/). React Native (Typescript) with Google Firebase (iOS Beta available on TestFlight).
+\item Future Plans: Temporarily paused when Apple announced this functionality as a native app on iOS 17.
+\end{tightemize}
+\sectionsep % Some whitespace after the section
+
+\runsubsection{Scriptable Widgets for iOS}
+\descript{}
+\location{Seeking Inspiration}
+\begin{tightemize}
+\item Collection of seven HomeScreen widgets, that I designed and developed, for the Scriptable App on iOS. With over 300+ stars and 100+ forks on GitHub.
+\item Motivation: Apple didn't allow widgets on the HomeScreen for the longest time. Even now, many widgets are basic and do not contain enough information.
+\item Tech Stack: JavaScript (https://github.com/yaylinda/scriptable)
+\item Future Plans: Seeking inspiration for other widgets!
+\end{tightemize}
+\sectionsep % Some whitespace after the section
 
 %----------------------------------------------------------------------------------------
 
